<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.nilhcem.fakesmtp</groupId>
	<artifactId>fakesmtp</artifactId>
	<version>2.9.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Fake SMTP</name>
	<description>Dummy SMTP server for testing</description>
	<url>https://github.com/Nilhcem/FakeSMTP</url>
	<!-- License -->
	<licenses>
		<license>
			<name>BSD</name>
			<url>LICENSE.txt</url>
		</license>
	</licenses>

	<!-- List the core committers + contributors -->
	<developers>
		<developer>
			<id>nilhcem</id>
			<name>Gautier MECHLING</name>
			<url>http://www.nilhcem.com</url>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Europe/Paris</timezone>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>jasonpenny</name>
			<url>https://github.com/jasonpenny</url>
		</contributor>
		<contributor>
			<name>andreyknupp</name>
			<url>https://github.com/andreyknupp</url>
		</contributor>
		<contributor>
			<name>eugenehr</name>
			<url>https://github.com/eugenehr</url>
		</contributor>
		<contributor>
			<name>cchantep</name>
			<url>https://github.com/cchantep</url>
		</contributor>
		<contributor>
			<name>essobedo</name>
			<url>https://github.com/essobedo</url>
		</contributor>
		<contributor>
			<name>rellem</name>
			<url>https://github.com/rellem</url>
		</contributor>
		<contributor>
			<name>nakag</name>
			<url>https://github.com/nakag</url>
		</contributor>
		<contributor>
			<name>pawel-piecyk</name>
			<url>https://github.com/pawel-piecyk</url>
		</contributor>
		<contributor>
			<name>modeckimellett</name>
			<url>https://github.com/modeckimellett</url>
		</contributor>
		<contributor>
			<name>Vest</name>
			<url>https://github.com/Vest</url>
		</contributor>
		<contributor>
			<name>evrycollin</name>
			<url>https://github.com/evrycollin</url>
		</contributor>
		<contributor>
			<name>lfuelling</name>
			<url>https://github.com/lfuelling</url>
		</contributor>
	</contributors>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<docker.image>fakesmtp</docker.image>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-bom</artifactId>
				<version>2.0.17</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<!-- MIG Layout: layout for Swing -->
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>11.4.2</version>
		</dependency>

		<!-- SubEtha SMTP: easy-to-use server-side SMTP library for Java -->
		<!-- See : https://github.com/davidmoten/subethasmtp/pull/37 (upgrade jakarta.mail to 2.0.0) -->
		<dependency>
			<groupId>com.github.davidmoten</groupId>
			<artifactId>subethasmtp</artifactId>
			<version>7.2.0</version>
		</dependency>
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
			<version>2.1.4</version>
			<scope>compile</scope>
		</dependency>

		<!-- Logging: slf4j + logback -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.19</version>
		</dependency>

		<!-- Commons CLI: API for presenting, processing and validating a command line interface -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.10.0</version>
		</dependency>

		<!-- Apple java extensions (to use a custom icon in the Mac Dock) -->
		<dependency>
			<groupId>com.apple</groupId>
			<artifactId>AppleJavaExtensions</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.42</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://jspecify.dev/docs/using/ -->
		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- Integration test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.6</version>
			<scope>test</scope>
		</dependency>
		<!-- commons-email not yet compatible with jakarta.mail, waiting for https://github.com/apache/commons-email/pull/37 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email2-jakarta</artifactId>
			<version>2.0.0-M1</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.sun.mail</groupId>
					<artifactId>jakarta.mail</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<finalName>fakeSMTP-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>${java.version}</release>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<propertiesEncoding>ISO-8859-1</propertiesEncoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>

			<!-- Integration tests. Launch them with "$ mvn integration-test" -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.4</version>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.4</version>
			</plugin>

			<!-- Make a Fat Jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>false</minimizeJar>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>com.nilhcem.fakesmtp.FakeSMTP</Main-Class>
										<SplashScreen-Image>META-INF/splash.png</SplashScreen-Image>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- For releases -->
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<version>1.21.0</version>
				<configuration>
					<gitFlowConfig>
						<productionBranch>master</productionBranch>
						<developmentBranch>master</developmentBranch>
						<versionTagPrefix>v</versionTagPrefix>
					</gitFlowConfig>
				</configuration>
			</plugin>

			<!-- Docker -->
			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.3.2</version>
				<configuration>
					<imageName>${docker.image}</imageName>
					<dockerDirectory>src/main/docker</dockerDirectory>
					<resources>
						<resource>
							<targetPath>/</targetPath>
							<directory>${project.build.directory}</directory>
							<include>${project.build.finalName}.jar</include>
						</resource>
					</resources>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>enforce-maven-version</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.8</version>
								</requireMavenVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
					<execution>
						<id>enforce-java-version</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
					<execution>
						<id>enforce-banned-dependencies</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<!-- Replaced by com.sun.mail:jakarta.mail -->
										<exclude>com.sun.mail:javax.mail</exclude>

										<!-- Not suitable for runtime (needs classes under com.sun.mail.*) -->
<!--										<exclude>jakarta.mail:jakarta.mail-api</exclude>-->
									</excludes>
								</bannedDependencies>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.basepom.maven</groupId>
				<artifactId>duplicate-finder-maven-plugin</artifactId>
				<version>2.0.1</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failBuildInCaseOfConflict>true</failBuildInCaseOfConflict>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>12.1.8</version>
			</plugin>
		</plugins>
	</build>
</project>
